# hamr-jiabu

./: .gitignore  README.md  STRUCTURE.txt  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260310000001_init.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs  middleware.rs  models.rs  routes.rs
backend/src/handlers/: decisions.rs  happiness.rs  mod.rs
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
